--- a/src/components/MaeSection/MaeSection.module.css
+++ b/src/components/MaeSection/MaeSection.module.css
@@ -193,7 +193,7 @@
     font-size: var(--font-par);
     position: absolute;
     top: 2em;
-    right: 0.5em;
+    right: 1em;
   }
 
   .textContent {
