--- a/src/components/ShowreelSection/ShowreelSection.module.css
+++ b/src/components/ShowreelSection/ShowreelSection.module.css
@@ -35,7 +35,7 @@
 /* Responsive - Mobile */
 @media screen and (max-width: 767px) {
   .section {
-    padding: 4em 1.5em;
+    padding: 2em 2em;
     height: auto;
   }
 
